Name:           LSLForge
version:        0.1.2
Synopsis:	    An execution and testing framework for the Linden Scripting Language (LSL)
Description:	
	Provides a framework for executing Linden Scripting Language scripts offline,
	i.e. outside a Second Life&#xAE; simulator.  The product is the LslForge executable,
        which works in cooperation with the LSLForge Eclipse plugin (the executable is not
        much use standalone).  This package is a derivate of LSL Plus by Robert Greayer.
Cabal-Version:  >= 1.5
Homepage:       http:/lslforge.googlecode.com/
License:        BSD3
License-file:   LICENSE
Category:	    Language
Copyright:	    Copyright (c) Robert Greayer 2008-2010, Others 2011-2012
Author:         Robert Greayer <robgreayer@yahoo.com>
Maintainer:	    "Newfie Pendragon" <elnewfie@yahoo.com>
Stability:	    experimental
Build-Type:     Simple
Tested-With:	GHC ==6.10.4
Extra-source-files: NOTICE

Executable LSLForge
  Build-Depends:  base >= 4.0 && < 5, haskell98, 
     filepath >= 1.1.0.0 && < 1.2, parsec >= 2.1.0.0 && < 3, 
     HaXml >= 1.19 && < 1.20, directory > 1 && < 1.1, array >= 0.2 && < 0.3,
     monads-fd > 0.0 && < 0.1, transformers >= 0.1 && < 0.2, 
     network >= 2.1 && < 2.3, random >= 1.0, containers >= 0.1 && < 0.3,
     old-time, utf8-string >= 0.3 && < 0.4, pureMD5 >= 0.2 && < 3, 
     bytestring >= 0.9 && < 0.10, template-haskell >= 2.3.0.0 && < 2.4, 
     syb >= 0.1.0.0 && < 0.2.0.0, fclabels > 0.4 && < 0.5
  Main-Is:        LslForge.hs
  Hs-Source-Dirs: src
  Other-modules: 
    Data.Generics.Extras.Schemes
    Data.Record.LabelExtras
    Language.Lsl.Internal.AccessGenerator
    Language.Lsl.Internal.Animation
    Language.Lsl.Internal.AvEvents
    Language.Lsl.Internal.Breakpoint
    Language.Lsl.Internal.BreakpointsDeserialize
    Language.Lsl.Internal.BuiltInModules
    Language.Lsl.Internal.CodeHelper
    Language.Lsl.Internal.CompilationServer
    Language.Lsl.Internal.Compiler
    Language.Lsl.Internal.Constants
    Language.Lsl.Internal.DOMCombinators
    Language.Lsl.Internal.DOMProcessing
    Language.Lsl.Internal.DOMSourceDescriptor
    Language.Lsl.Internal.DOMUnitTestDescriptor
    Language.Lsl.Internal.Evaluation
    Language.Lsl.Internal.EventSigs
    Language.Lsl.Internal.Exec
    Language.Lsl.Internal.ExecInfo
    Language.Lsl.Internal.ExpressionHandler
    Language.Lsl.Internal.FuncSigs
    Language.Lsl.Internal.InternalLLFuncs
    Language.Lsl.Internal.Key
    Language.Lsl.Internal.Load
    Language.Lsl.Internal.Log
    Language.Lsl.Internal.Math
    Language.Lsl.Internal.MetaData
    Language.Lsl.Internal.NumberParsing
    Language.Lsl.Internal.Optimize
    Language.Lsl.Internal.OptimizerOptions
    Language.Lsl.Internal.Physics
    Language.Lsl.Internal.Pragmas
    Language.Lsl.Internal.SerializationGenerator
    Language.Lsl.Internal.SerializationInstances
    Language.Lsl.Internal.SHA1
    Language.Lsl.Internal.SimLL
    Language.Lsl.Internal.SimMetaData
    Language.Lsl.Internal.SystemTester
    Language.Lsl.Internal.TestResult
    Language.Lsl.Internal.Type
    Language.Lsl.Internal.UnitTester
    Language.Lsl.Internal.Util
    Language.Lsl.Internal.WorldState
    Language.Lsl.Internal.WorldStateTypes
    Language.Lsl.Internal.XmlCreate
    Language.Lsl.Parse
    Language.Lsl.QQ
    Language.Lsl.Render
    Language.Lsl.Sim
    Language.Lsl.Syntax
    Language.Lsl.UnitTest
    Language.Lsl.UnitTestEnv
    Language.Lsl.WorldDef
    Text.Here
    Text.ParserCombinators.ParsecExtras.Language
    Text.ParserCombinators.ParsecExtras.Token
  Ghc-Options: -fwarn-unused-imports
