Name:           LslPlus
version:        0.6.2
Synopsis:	    An execution and testing framework for the Linden Scripting Language (LSL)
Description:	
	Provides a framework for executing Linden Scripting Language scripts offline,
	i.e. outside a Second Life&#xAE; simulator.  The product is the LslPlus executable,
        which works in cooperation with the LSL Plus Eclipse plugin (the executable is not
        much use standalone).
Cabal-Version:  >= 1.5
Homepage:       http:/lslplus.sourceforge.net/
License:        BSD3
License-file:   LICENSE
Category:	    Language
Copyright:	    Copyright (c) Robert Greayer 2008-2009.
Author:         Robert Greayer <robgreayer@yahoo.com>
Maintainer:	    Robert Greayer <robgreayer@yahoo.com>
Stability:	    experimental
Build-Type:     Simple
Tested-With:	GHC ==6.10.4
Extra-source-files: NOTICE

Executable LslPlus
  Build-Depends: HaXml == 1.19.7,
     array == 0.2.0.0,
     base == 4.1.0.0,
     bytestring == 0.9.1.4,
     containers == 0.2.0.1,
     directory == 1.0.0.3,
     filepath == 1.1.0.2,
     haskell98 == 1.0.1.0,
--     mtl == 1.1.0.2,
--     network == 2.2.1.4,
     network,
     old-time == 1.0.0.2,
     parsec == 2.1.0.1,
     pureMD5 == 1.0.0.0,
     random == 1.0.0.1,
     syb == 0.1.0.1,
     template-haskell == 2.3.0.1,
     utf8-string == 0.3.5,
--     transformers >= 0.1 && < 0.2,
     transformers == 0.2.2.0,
     fclabels > 0.4 && < 0.5,
     monads-fd == 0.1.0.0

  Main-Is:        LslPlus.hs
  Hs-Source-Dirs: src
  Other-modules: 
    Data.Generics.Extras.Schemes
    Data.Record.LabelExtras
    Language.Lsl.Internal.AccessGenerator
    Language.Lsl.Internal.Animation
    Language.Lsl.Internal.AvEvents
    Language.Lsl.Internal.Breakpoint
    Language.Lsl.Internal.BreakpointsDeserialize
    Language.Lsl.Internal.BuiltInModules
    Language.Lsl.Internal.CodeHelper
    Language.Lsl.Internal.CompilationServer
    Language.Lsl.Internal.Compiler
    Language.Lsl.Internal.Constants
    Language.Lsl.Internal.DOMCombinators
    Language.Lsl.Internal.DOMProcessing
    Language.Lsl.Internal.DOMSourceDescriptor
    Language.Lsl.Internal.DOMUnitTestDescriptor
    Language.Lsl.Internal.Evaluation
    Language.Lsl.Internal.EventSigs
    Language.Lsl.Internal.Exec
    Language.Lsl.Internal.ExecInfo
    Language.Lsl.Internal.ExpressionHandler
    Language.Lsl.Internal.FuncSigs
    Language.Lsl.Internal.InternalLLFuncs
    Language.Lsl.Internal.Key
    Language.Lsl.Internal.Load
    Language.Lsl.Internal.Log
    Language.Lsl.Internal.Math
    Language.Lsl.Internal.MetaData
    Language.Lsl.Internal.NumberParsing
    Language.Lsl.Internal.Optimize
    Language.Lsl.Internal.OptimizerOptions
    Language.Lsl.Internal.Physics
    Language.Lsl.Internal.Pragmas
    Language.Lsl.Internal.SerializationGenerator
    Language.Lsl.Internal.SerializationInstances
    Language.Lsl.Internal.SHA1
    Language.Lsl.Internal.SimLL
    Language.Lsl.Internal.SimMetaData
    Language.Lsl.Internal.SystemTester
    Language.Lsl.Internal.TestResult
    Language.Lsl.Internal.Type
    Language.Lsl.Internal.UnitTester
    Language.Lsl.Internal.Util
    Language.Lsl.Internal.WorldState
    Language.Lsl.Internal.WorldStateTypes
    Language.Lsl.Internal.XmlCreate
    Language.Lsl.Parse
    Language.Lsl.QQ
    Language.Lsl.Render
    Language.Lsl.Sim
    Language.Lsl.Syntax
    Language.Lsl.UnitTest
    Language.Lsl.UnitTestEnv
    Language.Lsl.WorldDef
    Text.Here
    Text.ParserCombinators.ParsecExtras.Language
    Text.ParserCombinators.ParsecExtras.Token
  Ghc-Options: -fwarn-unused-imports
